--- a/package.json
+++ b/package.json
@@ -11,33 +11,33 @@
   },
   "dependencies": {
     "@ark-ui/react": "^4.4.4",
-    "@mantine/form": "^7.14.2",
+    "@mantine/form": "^7.14.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "export-to-csv": "^1.4.0",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.468.0",
     "mantine-form-yup-resolver": "^2.0.0",
     "nanoid": "^5.0.9",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "yup": "^1.4.0",
-    "zustand": "^5.0.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "yup": "^1.5.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@eslint/js": "^9.16.0",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
+    "eslint": "^9.16.0",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.13.0",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.16",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.16.0",
-    "vite": "^5.4.11"
+    "typescript-eslint": "^8.17.0",
+    "vite": "^6.0.3"
   }
 }
